--- a/Swift_CustomApp/Base.lproj/Main.storyboard
+++ b/Swift_CustomApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mVJ-AC-Ggt">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -372,7 +372,7 @@
         <!--Communities-->
         <scene sceneID="EXh-Tb-eiQ">
             <objects>
-                <navigationController id="TzR-It-oph" sceneMemberID="viewController">
+                <navigationController id="TzR-It-oph" customClass="CustomNavigationController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Communities" image="person.3.fill" catalog="system" id="MzT-uX-UhC"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="4QJ-o5-uez">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
