--- a/Swift_CustomApp/Base.lproj/Main.storyboard
+++ b/Swift_CustomApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mVJ-AC-Ggt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -295,7 +295,7 @@
         <!--News Feed Table View Controller-->
         <scene sceneID="1T7-8P-neW">
             <objects>
-                <tableViewController id="IHd-nJ-65H" customClass="NewsFeedTableViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="NewsfeedNavID" id="IHd-nJ-65H" customClass="NewsFeedTableViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="MWD-Ad-iHh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -315,7 +315,13 @@
                             <outlet property="delegate" destination="IHd-nJ-65H" id="g73-WN-9C4"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="7L2-3t-piP"/>
+                    <navigationItem key="navigationItem" id="7L2-3t-piP">
+                        <barButtonItem key="leftBarButtonItem" image="doc.text" catalog="system" id="Hec-6F-DmA">
+                            <connections>
+                                <action selector="revealSideMenu" destination="IHd-nJ-65H" id="y3p-kZ-s5h"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R2b-AS-Z3b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -537,6 +543,7 @@
     </designables>
     <resources>
         <image name="VK_Compact_Logo" width="960" height="960"/>
+        <image name="doc.text" catalog="system" width="115" height="128"/>
         <image name="key" catalog="system" width="86" height="128"/>
         <image name="newspaper.fill" catalog="system" width="128" height="111"/>
         <image name="person.2.fill" catalog="system" width="128" height="80"/>
