--- a/UI/Cells/NewsFeed/NewsFeedAuthorTableViewCell.xib
+++ b/UI/Cells/NewsFeed/NewsFeedAuthorTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsFeedAuthorCell" rowHeight="67" id="KGk-i7-Jjw" customClass="NewsFeedAuthorTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsFeedAuthorCell" rowHeight="67" id="KGk-i7-Jjw" customClass="NewsFeedAuthorTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="67"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
